# Technews

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/web/: Cargo.toml
apps/web/src/: main.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
assets/: index-CzUFaqm0.js  index-gDFtijfe.css
crates/adapter/: Cargo.toml
crates/adapter/src/: http.rs
crates/domain/: Cargo.toml
crates/domain/src/: article.rs  error.rs  gateway.rs  lib.rs  repository.rs  trend.rs  user.rs
crates/infra/: Cargo.toml
crates/infra/src/: db.rs  gateway.rs  lib.rs
crates/infra/src/repo/: db.rs  mem.rs  mod.rs
crates/infra/tests/: repo_tests.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/usecase/: Cargo.toml
crates/usecase/src/: detect_trends.rs  feed.rs  fetch_feed.rs  ingest.rs  lib.rs  trends.rs
doc/: ARCHITECTURE.md  ARCHITECTURE_V2.md  DESIGN.md  ROADMAP.md
doc/ARCHIVE/legacy-v1/: DEPLOYMENT.md  README.md  design.md  index.html  package-lock.json  package.json  vite.config.js
doc/ARCHIVE/legacy-v1/src/adapters/: arxiv.js  github.js  hn.js  producthunt.js
doc/ARCHIVE/legacy-v1/src/components/: NewsCard.css
doc/ARCHIVE/legacy-v1/src/infrastructure/: keyword_engine.js  storage.js
doc/ARCHIVE/legacy-v1/src/models/: story.js
doc/ARCHIVE/legacy-v1/src/services/: settings_store.js  trend_engine.js
migrations/: 20240101000001_create_tables.sql
src/: main.js  style.css
src/adapters/: arxiv.js  github.js  producthunt.js  reddit.js
src/components/: NewsCard.css  NewsCard.js  TrendingBar.css  TrendingBar.js
src/models/: story.js
src/services/: aggregator.js  knowledge_store.js  milestone_store.js  settings_store.js  trend_engine.js
src/views/: blindspots.js  feed.js  timeline.js
