[package]
name = "techpulse-api"
version = "0.1.0"
edition = "2021"

[dependencies]
techpulse-adapter = { path = "../../crates/adapter" }
techpulse-infra = { path = "../../crates/infra" }
techpulse-shared = { path = "../../crates/shared" }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
