[package]
name = "techpulse-adapter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
techpulse-domain = { path = "../domain" }
techpulse-usecase = { path = "../usecase" }
techpulse-shared = { path = "../shared" }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1.89"
http-body-util = "0.1.3"
serde_json = "1.0.149"
techpulse-infra = { path = "../infra" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }
