[package]
name = "techpulse-infra"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
techpulse-domain = { path = "../domain" }
techpulse-shared = { path = "../shared" }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
tracing = "0.1"
serde = "1.0"

[dev-dependencies]
chrono = "0.4.43"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
